[package]
name = "libfuzzer_libpng"
version = "0.15.1"
authors = [
  "Andrea Fioraldi <andreafioraldi@gmail.com>",
  "Dominik Maier <domenukk@gmail.com>",
]
edition = "2021"

[features]
default = ["std"]
std = []
# Forces a crash
crash = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]  
cc = { version = "1.1.21", features = ["parallel"] }
which = "6.0.3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

libafl = {version = "0.15.2", features = ["default", "prometheus_monitor", "statsd_monitor"]}

libafl_bolts = "0.15.2"
libafl_targets = { version = "0.15.2", features = [
  "sancov_pcguard_hitcounts",
  "libfuzzer",
  "sancov_cmplog",
]}

libafl_cc = "0.15.2"

log = { version = "0.4.22", features = ["release_max_level_info"] }
mimalloc = { version = "0.1.43", default-features = false }

[lib]
name = "libfuzzer_libpng"
crate-type = ["staticlib"]
